Project tidy up

--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -13,7 +13,7 @@ title: Users
       <div class="col">
 
         <aside class="mb-5">
-          <a href="/admin"><i class="fal fa-arrow-circle-left me-2"></i>Back to Administration</a>
+          <a href="/admin" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"><i class="fal fa-arrow-circle-left me-2"></i>Back to Administration</a>
         </aside>
 
         <h1>Users</h1>
@@ -39,7 +39,7 @@ title: Users
                <td class="text-muted">Alice Fields</td>
                <td class="text-muted">alice@example.com</td>
                <td class="text-muted">Setting admin</td>
-               <td><span class="badge text-bg-danger w-100">Suspended</span></td>
+               <td><span class="badge rounded-pill text-bg-danger w-100">Suspended</span></td>
                <td class="text-muted">02/02/2023 09:03</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
@@ -50,7 +50,7 @@ title: Users
                <td>Gerald Sumner</td>
                <td>gerald@example.com</td>
                <td>Setting user</td>
-               <td><span class="badge text-bg-success w-100">Active</span></td>
+               <td><span class="badge rounded-pill text-bg-success w-100">Active</span></td>
                <td>13/02/2023 16:42</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
@@ -61,7 +61,7 @@ title: Users
                <td>Mehul Sandal</td>
                <td>mehul@example.com</td>
                <td>Co-ordinator</td>
-               <td><span class="badge text-bg-success w-100">Active</span></td>
+               <td><span class="badge rounded-pill text-bg-success w-100">Active</span></td>
                <td>31/01/2023 12:11</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
@@ -72,7 +72,7 @@ title: Users
                <td>Mohammed James Bashir</td>
                <td>mohammed@example.com</td>
                <td>Parent</td>
-               <td><span class="badge text-bg-info w-100">Invited</span></td>
+               <td><span class="badge rounded-pill text-bg-info w-100">Invited</span></td>
                <td class="text-muted">Never logged in</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
@@ -83,7 +83,7 @@ title: Users
                <td>Sally Graves</td>
                <td>sally@example.com</td>
                <td>Contributor</td>
-               <td><span class="badge text-bg-success w-100">Active</span></td>
+               <td><span class="badge rounded-pill text-bg-success w-100">Active</span></td>
                <td>09/03/2022 20:59</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
