--- a/admin/create-user.html
+++ b/admin/create-user.html
@@ -16,8 +16,10 @@ title: EHC Hub
         <p>Create a new user with a unique email address and assign the relevant permissions.
 
         <div class="card mb-5">
+          <div class="card-header">
+            Personal details
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Personal details</h5>
 
             <div class="row">
               <div class="col">
@@ -98,8 +100,10 @@ title: EHC Hub
         </div>
 
         <div class="card mb-5">
+          <div class="card-header">
+            Role
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Role</h5>
 
             <div class="row">
               <div class="col">
