--- a/admin/index.html
+++ b/admin/index.html
@@ -16,62 +16,68 @@ title: Administration
         <p>Configure and administer different sections of the EHC Hub for your needs.</p>
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-xl-4 g-4">
-          <div class="col mt-7">
+          <div class="col">
             <div class="card h-100">
+              <div class="card-header">
+                Users and organisations
+              </div>
               <div class="card-body">
-                <h5 class="card-title text-neutral-500">Users and organisations</h5>
                 <ul class="list-unstyled">
-                  <li class="mb-1"><a href="#">Settings</a></li>
-                  <li class="mb-1"><a href="#">Teams</a></li>
-                  <li class="mb-1"><a href="/admin/admin-users">Users</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Settings</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Teams</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/admin/admin-users">Users</a></li>
                 </ul>
               </div>
             </div>
           </div>
 
-          <div class="col mt-7">
+          <div class="col">
             <div class="card h-100">
+              <div class="card-header">
+                Communication
+              </div>
               <div class="card-body">
-                <h5 class="card-title text-neutral-500">Communication</h5>
                 <ul class="list-unstyled">
-                  <li class="mb-1"><a href="#">Accessbility statement</a></li>
-                  <li class="mb-1"><a href="#">Cookies</a></li>
-                  <li class="mb-1"><a href="#">Document admin</a></li>
-                  <li class="mb-1"><a href="#">Email admin</a></li>
-                  <li class="mb-1"><a href="#">Help</a></li>
-                  <li class="mb-1"><a href="#">Onscreen guidance</a></li>
-                  <li class="mb-1"><a href="/admin/admin-parent-guidance">Parent guidance</a></li>
-                  <li class="mb-1"><a href="#">Privacy</a></li>
-                  <li class="mb-1"><a href="#">Reminder emails</a></li>
-                  <li class="mb-1"><a href="#">Section guidance</a></li>
-                  <li class="mb-1"><a href="#">Templates</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Accessbility statement</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Cookies</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Document admin</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Email admin</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Help</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Onscreen guidance</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/admin/admin-parent-guidance">Parent guidance</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Privacy</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Reminder emails</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Section guidance</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Templates</a></li>
                 </ul>
               </div>
             </div>
           </div>
 
-          <div class="col mt-7">
+          <div class="col">
             <div class="card h-100">
+              <div class="card-header">
+                System
+              </div>
               <div class="card-body">
-                <h5 class="card-title text-neutral-500">System</h5>
                 <ul class="list-unstyled">
-                  <li class="mb-1"><a href="#">Case ID configuration</a></li>
-                  <li class="mb-1"><a href="#">Cease plan reasons</a></li>
-                  <li class="mb-1"><a href="#">Close case reasons</a></li>
-                  <li class="mb-1"><a href="#">Close review reasons</a></li>
-                  <li class="mb-1"><a href="#">Ethnicities</a></li>
-                  <li class="mb-1"><a href="#">Exception reasons</a></li>
-                  <li class="mb-1"><a href="#">Genders</a></li>
-                  <li class="mb-1"><a href="#">Languages</a></li>
-                  <li class="mb-1"><a href="#">Legal status</a></li>
-                  <li class="mb-1"><a href="#">LA names</a></li>
-                  <li class="mb-1"><a href="#">Meeting types</a></li>
-                  <li class="mb-1"><a href="#">Primary needs types</a></li>
-                  <li class="mb-1"><a href="#">Revert case reasons</a></li>
-                  <li class="mb-1"><a href="#">Setting types</a></li>
-                  <li class="mb-1"><a href="#">System settings</a></li>
-                  <li class="mb-1"><a href="#">Support audit</a></li>
-                  <li class="mb-1"><a href="#">Work based placements</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Case ID configuration</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Cease plan reasons</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Close case reasons</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Close review reasons</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Ethnicities</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Exception reasons</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Genders</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Languages</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Legal status</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">LA names</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Meeting types</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Primary needs types</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Revert case reasons</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Setting types</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">System settings</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Support audit</a></li>
+                  <li class="mb-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Work based placements</a></li>
                 </ul>
               </div>
             </div>
