--- a/case-view/advice.html
+++ b/case-view/advice.html
@@ -19,8 +19,8 @@ title: EHC Hub
         <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
-              <li class="breadcrumb-item"><a href="/case-view">Case home</a></li>
-              <li class="breadcrumb-item"><a href="assessment">Assessment</a></li>
+              <li class="breadcrumb-item"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Case home</a></li>
+              <li class="breadcrumb-item"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="assessment">Assessment</a></li>
               <li class="breadcrumb-item active" aria-current="page">Advice</li>
             </ol>
           </nav>
@@ -79,7 +79,7 @@ title: EHC Hub
                       <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio2" value="option2">
                       <label class="form-check-label" for="inlineRadio2">No</label>
                     </div>
-                    <a href="#"><small>Clear selection</small></a>
+                    <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                   </div>
                   <div class="mb-5">
                     <label for="exampleInput1" class="form-label required">Name of the person providing advice</label>
@@ -161,7 +161,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="inlineRadio4" value="option2">
                     <label class="form-check-label" for="inlineRadio4">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
                 <p class="card-text callout callout-info">If a decision is later made to issue an EHCP, the following may be used in Section B.</p>
                 <div class="mb-3">
@@ -240,7 +240,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions6" id="inlineRadio6" value="option2" checked>
                     <label class="form-check-label" for="inlineRadio6">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
               </div>
               <div class="card-footer d-flex justify-content-end">
@@ -272,7 +272,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions8" id="inlineRadio8" value="option2" checked>
                     <label class="form-check-label" for="inlineRadio8">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
               </div>
               <div class="card-footer d-flex justify-content-end">
@@ -304,7 +304,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions10" id="inlineRadio10" value="option2" checked>
                     <label class="form-check-label" for="inlineRadio10">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
               </div>
               <div class="card-footer d-flex justify-content-end">
@@ -336,7 +336,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions12" id="inlineRadio12" value="option2" checked>
                     <label class="form-check-label" for="inlineRadio12">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
               </div>
               <div class="card-footer d-flex justify-content-end">
@@ -368,7 +368,7 @@ title: EHC Hub
                     <input class="form-check-input" type="radio" name="inlineRadioOptions14" id="inlineRadio14" value="option2" checked>
                     <label class="form-check-label" for="inlineRadio14">No</label>
                   </div>
-                  <a href="#"><small>Clear selection</small></a>
+                  <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><small>Clear selection</small></a>
                 </div>
               </div>
               <div class="card-footer d-flex justify-content-end">
