--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -19,7 +19,7 @@ title: EHC Hub
         <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
-              <li class="breadcrumb-item"><a href="/case-view">Case home</a></li>
+              <li class="breadcrumb-item"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Case home</a></li>
               <li class="breadcrumb-item active" aria-current="page">Assessment</li>
             </ol>
           </nav>
@@ -95,7 +95,7 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">3</th>
-                 <td class="table-name-label"><a href="advice">Helen Clarkson</a></td>
+                 <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="advice">Helen Clarkson</a></td>
                  <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Occupational Therapist">Occupational Therapist</span></td>
                  <td>Health</td>
@@ -153,7 +153,7 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
-                 <td class="table-name-label"><a href="#">Henry Fowler</a></td>
+                 <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Henry Fowler</a></td>
                  <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Social Worker">Social Worker</span></td>
                  <td>Social Care</td>
@@ -173,7 +173,7 @@ title: EHC Hub
                </tr>
                <tr>
                  <th scope="row">5</th>
-                 <td class="table-name-label"><a href="#">Julie Grange</a></td>
+                 <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Julie Grange</a></td>
                  <td><span class="badge rounded-pill text-bg-success w-100">Completed</span></td>
                  <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Physio">Physio</span></td>
                  <td>Health</td>
@@ -207,7 +207,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_1.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4 rounded-top-4"><img class="mx-auto" src="/assets/images/about_1.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things that are important to me</p>
                    <p class="card-text text-muted"><small>Views missing<i class="fal fa-times ms-1"></i></small></p>
@@ -219,7 +219,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_2.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_2.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things that are working well at home and school</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -231,7 +231,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_3.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_3.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Other information I think is important to know about me</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -243,7 +243,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_4.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_4.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Important things to know about my past</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -255,7 +255,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_5.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_5.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things I enjoy doing</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -267,7 +267,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_6.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_6.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">How to communicate with me</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -279,7 +279,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_7.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_7.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">My hopes, dreams and aspirations for the future</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -291,7 +291,7 @@ title: EHC Hub
            <div class="col">
              <a href="#">
                <div class="card h-100">
-                 <span class="bg-success-50"><img class="mx-auto" src="/assets/images/about_8.png" alt="Decorative gradient image"></span>
+                 <span class="bg-success-50 rounded-top-4"><img class="mx-auto" src="/assets/images/about_8.png" alt="Decorative gradient image"></span>
                  <div class="card-body">
                    <p class="card-text">Things I would like to change at home and school</p>
                    <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -312,7 +312,7 @@ title: EHC Hub
             <div class="col">
               <a href="#">
                 <div class="card h-100">
-                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_1.png" alt="Decorative gradient image"></span>
+                  <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_1.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Important things to know about our family history</p>
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -324,7 +324,7 @@ title: EHC Hub
             <div class="col">
               <a href="#">
                 <div class="card h-100">
-                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_2.png" alt="Decorative gradient image"></span>
+                  <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_2.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Things that are working well at home and school</p>
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -336,7 +336,7 @@ title: EHC Hub
             <div class="col">
               <a href="#">
                 <div class="card h-100">
-                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_3.png" alt="Decorative gradient image"></span>
+                  <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_3.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Things that are not working well and we would like to change</p>
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -348,7 +348,7 @@ title: EHC Hub
             <div class="col">
               <a href="#">
                 <div class="card h-100">
-                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_4.png" alt="Decorative gradient image"></span>
+                  <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_4.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Our hopes and aspirations for the future</p>
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
@@ -360,7 +360,7 @@ title: EHC Hub
             <div class="col">
               <a href="#">
                 <div class="card h-100">
-                  <span class="bg-warning-50"><img class="mx-auto" src="/assets/images/parent_5.png" alt="Decorative gradient image"></span>
+                  <span class="bg-warning-50 rounded-top-4"><img class="mx-auto" src="/assets/images/parent_5.png" alt="Decorative gradient image"></span>
                   <div class="card-body">
                     <p class="card-text">Other information we think is important</p>
                     <p class="card-text text-success"><small>Views added<i class="fal fa-check ms-1"></i></small></p>
