--- a/case-view/index.html
+++ b/case-view/index.html
@@ -70,7 +70,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Current</small></span><br>
-                      <a href="#">Amended</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Amended</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Issued</small></span><br>
@@ -82,7 +82,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Previous</small></span><br>
-                      <a href="#">EHCP</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">EHCP</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Issued</small></span><br>
@@ -94,7 +94,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>First</small></span><br>
-                      <a href="#">EHCP</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">EHCP</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Issued</small></span><br>
@@ -104,7 +104,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -152,7 +152,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Previous</small></span><br>
-                      <a href="#">Maintain</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Maintain</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Completed</small></span><br>
@@ -174,7 +174,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-history me-2" aria-hidden="true"></i>View history</a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Plan decision</small></span><br>
-                      <a href="#">Agree to issue</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Agree to issue</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -218,7 +218,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Assess decision</small></span><br>
-                      <a href="#">Proceed</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Proceed</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -230,7 +230,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Request</small></span><br>
-                      <a href="#">Received</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Received</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -240,7 +240,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
@@ -272,7 +272,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Subject</small></span><br>
-                      <a href="#">EHCP issued</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">EHCP issued</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -284,7 +284,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Subject</small></span><br>
-                      <a href="#">Review decision</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Review decision</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -296,7 +296,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Subject</small></span><br>
-                      <a href="#">Review meeting</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Review meeting</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -306,7 +306,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
@@ -337,7 +337,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Tribunal</small></span><br>
-                      <a href="#">Tribunal order</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Tribunal order</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -349,7 +349,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Mediation</small></span><br>
-                      <a href="#">Certificate issued</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Certificate issued</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -361,7 +361,7 @@ title: Case summary
                   <div class="d-flex justify-content-between">
                     <div>
                       <span class="text-muted"><small>Mediation</small></span><br>
-                      <a href="#">Meeting cancelled</a>
+                      <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Meeting cancelled</a>
                     </div>
                     <div class="text-end">
                       <span class="text-muted"><small>Date</small></span><br>
@@ -371,7 +371,7 @@ title: Case summary
                 </li>
               </ul>
               <div class="card-footer">
-                <a href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
+                <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="card-link"><i class="fal fa-arrow-circle-right me-2" aria-hidden="true"></i>View more</a>
               </div>
             </div>
           </div>
