--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -19,8 +19,8 @@ title: EHC Hub
         <div class="d-flex flex-column flex-md-row justify-content-md-between text-neutral-600">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
-              <li class="breadcrumb-item"><a href="/case-view">Case home</a></li>
-              <li class="breadcrumb-item"><a href="/case-view/assessment">Assessment</a></li>
+              <li class="breadcrumb-item"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Case home</a></li>
+              <li class="breadcrumb-item"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view/assessment">Assessment</a></li>
               <li class="breadcrumb-item active" aria-current="page">Timeline</li>
             </ol>
           </nav>
@@ -48,7 +48,7 @@ title: EHC Hub
             </li>
             <li class="list-group-item">
               Phone call today at 9:50am with SENDIASS to discuss options to support Ellery's family through this process. Agreed action is for SENDIASS representative to meet with Shane Holden on Friday at the school.
-              <p><a href="#">SENDIAS-agreement-signed.pdf</a></p>
+              <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">SENDIAS-agreement-signed.pdf</a></p>
               <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
@@ -121,7 +121,7 @@ title: EHC Hub
               </div>
             </li>
             <li class="list-group-item">
-              Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
+              Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
               <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
@@ -138,7 +138,7 @@ title: EHC Hub
               </div>
             </li>
             <li class="list-group-item">
-              Invited Helen Glass to a review meeting. A notification email was sent to <a href="mailto:helen.glass@example.com">helen.glass@example.com</a>
+              Invited Helen Glass to a review meeting. A notification email was sent to <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="mailto:helen.glass@example.com">helen.glass@example.com</a>
               <p class="text-muted mb-0"><small>12 Jul 2023 11:49</small></p>
             </li>
           </ul>
