--- a/cookies/index.html
+++ b/cookies/index.html
@@ -14,7 +14,7 @@ title: Cookies
 
         <h1>Information about the cookies we store on your computer</h1>
 
-        <p>A cookie is a text file that identifies your computer to our server. Unless you are signed in, cookies in themselves do not identify the individual user, just the computer used. You have the opportunity to set your computer to accept all cookies, to notify you when a cookie is issued, or not to receive cookies at any time. The way in which you do this depends upon the web browser which you use. Please refer to the "Help" function for your browser or visit <a href="https://www.allaboutcookies.org" target="_blank">www.allaboutcookies.org</a>. If you accept cookies, they may remain on your computer, unless you delete them. Please note that turning off cookies will limit or prevent your use of our site.</p>
+        <p>A cookie is a text file that identifies your computer to our server. Unless you are signed in, cookies in themselves do not identify the individual user, just the computer used. You have the opportunity to set your computer to accept all cookies, to notify you when a cookie is issued, or not to receive cookies at any time. The way in which you do this depends upon the web browser which you use. Please refer to the "Help" function for your browser or visit <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://www.allaboutcookies.org" target="_blank">www.allaboutcookies.org</a>. If you accept cookies, they may remain on your computer, unless you delete them. Please note that turning off cookies will limit or prevent your use of our site.</p>
         <p>This site uses essential and anonymous analytics cookies.</p>
 
         <h2>Essential cookies</h2>
@@ -50,7 +50,7 @@ title: Cookies
 
         <h2>Anonymous analytics cookies</h2>
 
-        <p>Microsoft Clarity is used to anonymously analyse how you use and interact with our site through heatmaps and session replay. Total masking is in place to protect all personal and sensitive data from being seen or stored. Site usage data is captured using first and third-party cookies and is used to improve our site. For more information about how Microsoft collects and uses your data, visit the <a href="https://privacy.microsoft.com/privacystatement" target="_blank">Microsoft Privacy Statement</a>.</p>
+        <p>Microsoft Clarity is used to anonymously analyse how you use and interact with our site through heatmaps and session replay. Total masking is in place to protect all personal and sensitive data from being seen or stored. Site usage data is captured using first and third-party cookies and is used to improve our site. For more information about how Microsoft collects and uses your data, visit the <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://privacy.microsoft.com/privacystatement" target="_blank">Microsoft Privacy Statement</a>.</p>
 
         <div class="table-responsive">
           <table class="table table-bordered align-top">
