--- a/help/index.html
+++ b/help/index.html
@@ -17,27 +17,27 @@ title: Help
 
         <h2>Documents</h2>
 
-        <p><a href="#">Case Co-ordinator's guide</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Case Co-ordinator's guide</a></p>
 
-        <p><a href="#">Frequently Asked Questions</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Frequently Asked Questions</a></p>
 
-        <p><a href="#">Panel meetings guide</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Panel meetings guide</a></p>
 
-        <p><a href="#">Administrator's guide (Administrator only)</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Administrator's guide (Administrator only)</a></p>
 
         <h2>Videos</h2>
 
-        <p><a href="#">Account registration</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Account registration</a></p>
 
-        <p><a href="#">How to close a case outside of process</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">How to close a case outside of process</a></p>
 
-        <p><a href="#"><a href="#">How to overturn a decision not to proceed</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">How to overturn a decision not to proceed</a></p>
 
-        <p><a href="#">How to record an exception</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">How to record an exception</a></p>
 
-        <p><a href="#">How to re-open a completed request for advice</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">How to re-open a completed request for advice</a></p>
 
-        <p><a href="#">How to reset a user’s two factor authentication settings (Administrator only)</a></p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">How to reset a user’s two factor authentication settings (Administrator only)</a></p>
 
         <h2>Technical support</h2>
 
@@ -45,9 +45,9 @@ title: Help
 
         <p>Technical queries or issues can be raised to the Idox Service Desk Team using one of the following methods of contact:</p>
 
-        <p>Service desk portal: <a href="#">https://customer.servicedesk.idoxgroup.com/idoxsd</a></p>
+        <p>Service desk portal: <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">https://customer.servicedesk.idoxgroup.com/idoxsd</a></p>
 
-        <p>Email: <a href="#">servicedesk@idoxgroup.com</a></p>
+        <p>Email: <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">servicedesk@idoxgroup.com</a></p>
 
         <p>Telephone: 03330 111 668</p>
 
