--- a/new-request/index.html
+++ b/new-request/index.html
@@ -13,7 +13,7 @@ title: EHC Hub
       <div class="col">
 
         <h1>Request an EHC needs assessment</h1>
-        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#" class="idox-more-link">read more <i class="fal fa-angle-double-right"></i></a></p>
+        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#" class="idox-more-link">read more <i class="fal fa-angle-double-right"></i></a></p>
 
         {% include actions-new-request.html %}
 
