--- a/onboarding/tfa-app.html
+++ b/onboarding/tfa-app.html
@@ -25,7 +25,7 @@ title: EHC Hub
 				</li>
 				<li class="my-1">Enter the following key in your authentication app: <strong>857 665 444</strong></li>
 
-				<a role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
 		      <span class="visually-hidden">More information</span>
 		      <i class="fas fa-caret-right me-1"></i>Use a QR code instead
 		    </a>
@@ -45,7 +45,7 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 
-			<p>If you'd rather receive a text message (SMS), <a href="tfa-choose">start again</a>.
+			<p>If you'd rather receive a text message (SMS), <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.
 
 		</main>
 
