--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -40,7 +40,7 @@ title: EHC Hub
 			  </label>
 			</div>
 
-			<a role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
+			<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
 	      <span class="visually-hidden">More information</span>
 	      <i class="fas fa-caret-right me-1"></i>I need more information
 	    </a>
@@ -52,7 +52,7 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn my-6" href="tfa-app">Continue</a>
 
-			<a class="mt-3 mb-6" href="tfa-phrase">What if I don't have a mobile phone?</a>
+			<a class="mt-3 mb-6 link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-phrase">What if I don't have a mobile phone?</a>
 
 		</main>
 
