--- a/onboarding/tfa-phrase-auth.html
+++ b/onboarding/tfa-phrase-auth.html
@@ -40,7 +40,7 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 
-			<p><a href="/">Back to Log in</a></p>
+			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
 
 		</main>
 
