--- a/reports/sen2.html
+++ b/reports/sen2.html
@@ -30,9 +30,10 @@ title: Reporting
         <p>An export file in CSV format to support the annual collection of SEN data for the Department for Education (DfE). Create a 'real-time' export of data to download, or download the most recent scheduled snapshot file created on the DfE's published census date.</p>
 
         <div class="card mb-5">
+          <div class=card-header>
+            On-demand export
+          </div>
           <div class="card-body">
-
-            <h5 class="card-title mb-5">On-demand export</h5>
 
             <a href="/reports/sen2-progress" class="btn btn-neutral-50"><i class="fal fa-file-plus me-2"></i>Create file</a>
 
@@ -51,13 +52,13 @@ title: Reporting
                    <td>sen2_data_export.csv</td>
                    <td>04 August 2023 11:12</td>
                    <td>Bob Schneider</td>
-                   <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+                   <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
                  </tr>
                  <tr>
                    <td>sen2_data_export.csv</td>
                    <td>29 July 2023 15:59</td>
                    <td>Bob Schneider</td>
-                   <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+                   <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
                  </tr>
                </tbody>
              </table>
@@ -68,13 +69,12 @@ title: Reporting
         </div>
 
         <div class="card mb-5">
+          <div class=card-header>
+            Scheduled export
+          </div>
           <div class="card-body">
-
-          <h5 class="card-title mb-5">Scheduled export</h5>
-           <div class="alert alert-info m-0" role="alert">
-             <div>
-               <i class="fal fa-info-circle me-2"></i>The next snapshot file is scheduled for 18 January 2024 at 22:20 and will overwrite the previous file.
-             </div>
+           <div class="callout callout-info mb-0">
+             <p>The next snapshot file is scheduled for 18 January 2024 at 22:20 and will overwrite the previous file.</p>
            </div>
 
            <div class="table-responsive">
@@ -92,7 +92,7 @@ title: Reporting
                   <td>sen2_data_export.csv</td>
                   <td>19 January 2023 22:20</td>
                   <td>System</td>
-                  <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
+                  <td class="no-wrap"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
                 </tr>
               </tbody>
             </table>
