--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -39,7 +39,7 @@ title: Work tray
                  <tbody>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy in a forest.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Alvin"></td>
-                     <td class="table-name-label"><a href="#">Hanson, Alvin-Tucker</a></td>
+                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Hanson, Alvin-Tucker</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Highfield Academy">Highfield Academy</span></td>
@@ -50,7 +50,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/boy running.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Ellery"></td>
-                     <td class="table-name-label"><a href="#">Holden, Ellery</a></td>
+                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Holden, Ellery</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Oak Junior School">Oak Junior School</span></td>
@@ -67,7 +67,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/girl at school.jpg" class="rounded d-block idx-avatar-card" alt="Photo of  Sienna"></td>
-                     <td class="table-name-label"><a href="#">Reid, Sienna</a></td>
+                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Reid, Sienna</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="St Mary's Primary">St Mary's Primary</span></td>
@@ -78,7 +78,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/teenager at college.jpg" class="rounded d-block idx-avatar-card" alt="Photo of Chandler"></td>
-                     <td class="table-name-label"><a href="/case-view">Tate, Chandler</a></td>
+                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/case-view">Tate, Chandler</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
@@ -93,7 +93,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
-                     <td class="table-name-label"><a href="#">Wagner, Victor</a></td>
+                     <td class="table-name-label"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">EHC/21/0123</td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td class="text-truncate" style="max-width:150px"><span class="cursor-default" data-bs-toggle="tooltip" data-bs-title="Greenhill School">Greenhill School</span></td>
