--- a/accessibility/index.html
+++ b/accessibility/index.html
@@ -25,7 +25,7 @@ title: Accessibility
         </ul>
 
         <p>We’ve also made the website text as simple as possible to understand.</p>
-        <p><a href="https://mcmw.abilitynet.org.uk" target="_blank">AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
+        <p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://mcmw.abilitynet.org.uk" target="_blank">AbilityNet</a> has advice on making your device easier to use if you have a disability.</p>
 
         <h2>How accessible this website is</h2>
 
@@ -41,14 +41,14 @@ title: Accessibility
 
         <p>If you find any problems not listed on this page or think we’re not meeting accessibility requirements, please tell us:</p>
         <p>
-          Service desk portal: <a href="https://customer.servicedesk.idoxgroup.com/idoxsd">https://customer.servicedesk.idoxgroup.com/idoxsd</a><br>
-          Email: <a href="mailto:servicedesk@idoxgroup.com">servicedesk@idoxgroup.com</a><br>
+          Service desk portal: <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://customer.servicedesk.idoxgroup.com/idoxsd">https://customer.servicedesk.idoxgroup.com/idoxsd</a><br>
+          Email: <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="mailto:servicedesk@idoxgroup.com">servicedesk@idoxgroup.com</a><br>
           Telephone: 03330 111 668
         </p>
 
         <h2>Enforcement procedure</h2>
 
-        <p>The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a href="https://www.equalityadvisoryservice.com/" target="_blank">contact the Equality Advisory and Support Service (EASS)</a>.</p>
+        <p>The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="https://www.equalityadvisoryservice.com/" target="_blank">contact the Equality Advisory and Support Service (EASS)</a>.</p>
 
         <h2>Technical information about this website’s accessibility</h2>
 
