--- a/admin/admin-parent-guidance.html
+++ b/admin/admin-parent-guidance.html
@@ -13,7 +13,7 @@ title: Parent guidance
       <div class="col">
 
         <aside class="mb-5">
-          <a href="/admin"><i class="fal fa-arrow-circle-left me-2"></i>Back to Administration</a>
+          <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/admin"><i class="fal fa-arrow-circle-left me-2"></i>Back to Administration</a>
         </aside>
 
         <h1>Parent guidance</h1>
