--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@ title: EHC Hub
 			<div class="form mb-3">
 				<label for="passwordInput">Password</label>
 				<input type="password" class="form-control" id="passwordInput" placeholder="">
-				<a href="onboarding/p-reset">Forgotten password?</a>
+				<a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="onboarding/p-reset">Forgotten password?</a>
 			</div>
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/onboarding/tfa-app-auth">Log in</a>
 
 			<ul class="list-group login-list mb-4">
-				<li class="me-2"><a href="anon">Request needs assessment</a></li>
+				<li class="me-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="anon">Request needs assessment</a></li>
 			</ul>
 
 			<ul class="list-group list-group-horizontal login-list">
-				<li class="me-2"><a href="#">Accessibility</a></li>
-				<li class="me-2"><a href="#">Cookies</a></li>
-				<li class="me-2"><a href="#">Privacy</a></li>
+				<li class="me-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Accessibility</a></li>
+				<li class="me-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Cookies</a></li>
+				<li class="me-2"><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="#">Privacy</a></li>
 			</ul>
 
 		</main>
