--- a/onboarding/tfa-app-auth.html
+++ b/onboarding/tfa-app-auth.html
@@ -29,7 +29,7 @@ title: EHC Hub
 			</div>
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
-			<p><a href="/">Back to Log in</a></p>
+			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="/">Back to Log in</a></p>
 		</main>
 
 	</div>
