--- a/onboarding/tfa-sms-2.html
+++ b/onboarding/tfa-sms-2.html
@@ -23,9 +23,9 @@ title: EHC Hub
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Log in</a>
 
-			<p><a href="tfa-sms-1">Resend log in code</a></p>
+			<p><a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-sms-1">Resend log in code</a></p>
 
-			<p>If you'd rather use an authentication app, <a href="tfa-choose">start again</a>.</p>
+			<p>If you'd rather use an authentication app, <a class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="tfa-choose">start again</a>.</p>
 
 		</main>
 
