--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -16,8 +16,10 @@ title: EHC Hub
         <p>Manage your personal details and login information to keep your profile up to date.</p>
 
         <div class="card mb-5">
+          <div class="card-header">
+            Personal details
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Personal details</h5>
 
             <div class="row">
               <div class="col-md-6">
@@ -85,8 +87,10 @@ title: EHC Hub
         </div>
 
         <div class="card mb-5">
+          <div class="card-header">
+            Security
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Security</h5>
 
             <div class="row">
               <div class="col-md-6">
@@ -107,8 +111,10 @@ title: EHC Hub
         </div>
 
         <div class="card mb-5">
+          <div class="card-header">
+            Two Factor Authentication
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Two Factor Authentication</h5>
 
             <div class="row">
               <div class="col-md-6">
@@ -122,8 +128,10 @@ title: EHC Hub
         </div>
 
         <div class="card mb-5">
+          <div class="card-header">
+            Further information
+          </div>
           <div class="card-body">
-            <h5 class="card-title">Further information</h5>
 
             <div class="row">
               <div class="col-6 col-sm-4 col-md-3 col-xl-2">
